--- a/index.html
+++ b/index.html
@@ -1,96 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mn">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Color</title>
+    <title>Personal Color – Хувийн өнгө тодорхойлох AI</title>
     <meta
       name="description"
-      content="AI-based personal color analysis service by an individual freelancer"
+      content="AI-д суурилсан хувийн өнгө тодорхойлох үйлчилгээ. Хувь хүн freelancer төслийн танилцуулга."
     />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <!-- HERO -->
     <header>
-      <h1>Personal Color</h1>
+      <span class="badge">AI • Personal Color</span>
+      <h1>Хувийн өнгөө AI-гаар тодорхойл</h1>
       <p>
-        AI-based personal color analysis service that helps individuals discover
-        their best colors for fashion, makeup, and personal branding.
+        Таны арьсны өнгө, дэд өнгө, контрастад тохирсон хувийн өнгийн палитрыг
+        хиймэл оюун ухаанаар тодорхойлж өгнө.
       </p>
-      <div class="cta">
-        <a href="#contact">Get Started</a>
-      </div>
+      <div class="cta"><a href="#contact">Эхлэх</a></div>
     </header>
 
+    <!-- ABOUT -->
     <section>
-      <h2>What is Personal Color?</h2>
-      <p>
-        Personal Color analysis identifies which colors harmonize best with your
-        natural features. Our AI-powered system analyzes images and provides
-        personalized color recommendations.
+      <h2>Personal Color гэж юу вэ?</h2>
+      <p class="muted">
+        Хувийн өнгө гэдэг нь таны байгалийн онцлогт (арьс, үс, нүд) хамгийн
+        зохицох өнгөнүүдийг тодорхойлох аргачлал юм. Манай үйлчилгээ нь AI-д
+        суурилж зураг анализлан санал болгодог.
       </p>
     </section>
 
+    <!-- FEATURES -->
     <section>
-      <h2>Features</h2>
+      <h2>Давуу талууд</h2>
       <div class="grid">
         <div class="card">
-          <h3>AI Analysis</h3>
+          <h3>AI шинжилгээ</h3>
           <p>
-            Advanced machine learning models analyze skin tone, contrast, and
-            undertone.
+            Арьсны дэд өнгө, контраст, өнгөний зохицлыг машин сургалтаар
+            шинжилнэ.
           </p>
         </div>
         <div class="card">
-          <h3>Instant Results</h3>
-          <p>
-            Get your personal color type and recommendations within seconds.
-          </p>
+          <h3>Шууд үр дүн</h3>
+          <p>Хэдхэн секундын дотор таны хувийн өнгөний төрлийг гаргана.</p>
         </div>
         <div class="card">
-          <h3>Freelancer Project</h3>
-          <p>
-            This service is developed and maintained by an individual
-            freelancer.
-          </p>
+          <h3>Freelancer төсөл</h3>
+          <p>Энэ нь хувь хүн freelancer-ийн хөгжүүлж буй бодит үйлчилгээ юм.</p>
         </div>
       </div>
     </section>
 
+    <!-- HOW -->
     <section>
-      <h2>How It Works</h2>
+      <h2>Хэрхэн ажиллах вэ?</h2>
       <div class="grid">
         <div class="card">
-          <h3>1. Upload Photo</h3>
-          <p>Upload a clear photo in natural lighting.</p>
+          <h3>1. Зураг оруулах</h3>
+          <p>Байгалийн гэрэлд авсан тод зураг байршуулна.</p>
         </div>
         <div class="card">
-          <h3>2. AI Processing</h3>
-          <p>The system analyzes color harmony and undertones.</p>
+          <h3>2. AI боловсруулалт</h3>
+          <p>Өнгөний зохицол, дэд өнгийг тооцоолно.</p>
         </div>
         <div class="card">
-          <h3>3. Get Results</h3>
-          <p>Receive your personal color palette and tips.</p>
+          <h3>3. Үр дүн авах</h3>
+          <p>Танд тохирох палитр ба зөвлөмж авна.</p>
         </div>
       </div>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
+    <!-- META / PERMISSION ALIGNMENT -->
+    <section>
+      <h2>Итгэлцэл & Нууцлал</h2>
       <div class="card">
-        <p><strong>Email:</strong>personal.color.find@gmail.com</p>
+        <p>
+          <strong>Meta App ашиглалт:</strong> Messenger чат, автомат хариу,
+          хэрэглэгчийн илгээсэн мэдээллийг зөвхөн үйлчилгээ үзүүлэх зорилгоор
+          ашиглана.
+        </p>
+        <p>
+          <strong>Өгөгдөл:</strong> Хэрэглэгчийн зөвшөөрөлгүйгээр гуравдагч
+          этгээдэд дамжуулахгүй.
+        </p>
+        <p><strong>Төрөл:</strong> Хувь хүн freelancer төсөл (компани биш).</p>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <h2>Холбоо барих</h2>
+      <div class="card">
+        <p><strong>Имэйл:</strong>personal.color.find@gmail.com</p>
         <p>
           <strong>Facebook Page:</strong>
           <a href="https://www.facebook.com/profile.php?id=61585104030689"
             >facebook.com/Personal-color</a
           >
         </p>
-        <p>This is an individual freelance project.</p>
+        <p class="muted">
+          Энэ нь хувь хүн freelancer-ийн хэрэгжүүлж буй төсөл юм.
+        </p>
       </div>
     </section>
 
     <footer>
-      <p>© 2025 Personal Color. Individual freelance project.</p>
+      <p>© 2025 Personal Color — Individual Freelancer Project</p>
     </footer>
   </body>
 </html>
